# IJ646

./: .gitignore  CMakeLists.txt
Article/: article.aux  article.blg  article.out  article.tcp  article.toc  article.tps  listcode.tex
Source/: CMakeLists.txt  itkPixelMapImage.h  itkPixelMapImage.txx  itkPixelMapImageContainer.h  itkPixelMapImageContainer.txx  itkPixelMapImageNeighborhoodAccessorFunctor.h  itkPixelMapImagePixelAccessor.h  itkPixelMapImagePixelAccessorFunctor.h  itkSingleBitBinaryImage.h  itkSingleBitBinaryImageNeighborhoodAccessorFunctor.h  itkSingleBitBinaryImagePixelAccessor.h  itkSingleBitBinaryImagePixelAccessorFunctor.h  itkSliceContiguousImageNeighborhoodAccessorFunctor.h  itkSparseImage.h  itkSparseImageContainer.h  itkSparseImageNeighborhoodAccessorFunctor.h  itkSparseImagePixelAccessor.h  itkSparseImagePixelAccessorFunctor.h  perf01.cxx
Testing/: CMakeLists.txt  PixelMapImageTest01.cxx  SingleBitBinaryImageTest01.cxx  SliceContiguousImageTest01.cxx  SparseImageTest01.cxx
